[package]
name = "sia_core"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/SiaFoundation/core-rs"
license = "MIT"
description = "Low-level SDK for interacting with the Sia decentralized storage network"
authors = [ "The Sia Foundation" ]
categories = [ "cryptography::cryptocurrencies" ]
keywords = [ "sia", "decentralized", "blockchain", "depin", "storage" ]

[lib]
name = "sia_core"
path = "src/lib.rs"

[dependencies]
bip39 = "2.0.0"
blake2b_simd = "1.0.2"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror = "1.0.63"

[dev-dependencies]
rand = "0.8.5"
