[package]
name = "sia_sdk"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Low-level SDK for interacting with the Sia decentralized storage network"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
name = "sia"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
bip39 = "2.1.0"
blake2b_simd = "1.0.2"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
num-bigint = "0.4.6"
num-rational = { version = "0.4.2", features = ["num-bigint"] }
num-traits = "0.2.19"
rayon = "1.10.0"
serde = { version = "1.0.213", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.132"
sha2 = "0.10.8"
sia_sdk_derive = { version = "0.0.1", path = "../sia_derive" }
thiserror = "2.0.3"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
uint = "0.10.0"

[dev-dependencies]
rand = "0.8.5"
criterion = { version = "0.5" }

[[bench]]
name = "merkle_root"
harness = false
