[package]
name = "sia_sdk_derive"
version = "0.0.2"
edition = "2021"
repository = "https://github.com/SiaFoundation/sia-sdk-rs"
license = "MIT"
description = "Macro implementations for sia-sdk"
authors = ["The Sia Foundation"]
categories = ["cryptography::cryptocurrencies"]
keywords = ["sia", "decentralized", "blockchain", "depin", "storage"]

[lib]
proc-macro = true
name = "sia_derive"

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
