[package]
name = "sia_js"
version = "0.1.0"
authors = ["The Sia Foundation <hi@sia.tech>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
test_in_browser = []

[dependencies]
wasm-bindgen = "0.2.84"
sia_sdk = { version = "0.0.1", path = "../sia" }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.74"
serde = "1.0.215"

[dev-dependencies]
hex = "0.4.3"
wasm-bindgen-test = "0.3.34"
